# adita

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
src/: codegen.ts  error.rs  fragment.rs  generator.rs  index.ts  main.rs  processor.rs
